erro wiht push/pull, copied pasted from branch

--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
 </head>
 
 <body>
+    <Header>
+    <nav id="highscore">Highscores</nav>
+    <!-- uses js to show timer -->
+    <p id="timer"></p>
+    </Header>
+
+    <main>
+      <form id="quiz-area">
+        <!-- uses js to add question -->
+        <h1 id="question"></h1>
+        <div id="answer-area">
+          <!-- uses append child in js to add answers as buttons-->
+          <ul id="answers"></ul>
+        </div>
+      </form>
+      
+      <section id="highscore-area">
+        <!-- uses append child and local storage in js to show list info -->
+        <ul id="highscore-list"></ul>
+      </section>
+    </main>
+
   <script src= "./assets/script.js"></script>
 </body>
 </html>
