created document elements for easier coding and changed some names in the HTML

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <Header>
-    <nav id="highscore">Highscores</nav>
+    <nav id="score">scores</nav>
     <!-- uses js to show timer -->
     <p id="timer"></p>
     </Header>
