made the functions for the timers and allowed for input of name and score along with the option to retry quiz

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
   <Header>
-    <nav id="score">scores</nav>
     <!-- uses js to show timer -->
     <p id="timer"></p>
   </Header>
@@ -27,6 +26,8 @@
       </div>
       <div id = button-area>
         <button id="quizButton">Start</button>
+        <button class="end" id="scoreButton">Submit</button>
+        <button class="end" id="againButton">Retry</button>
       </div>
     </form>
 
