edited some of the html and allowed for the storing and getting of the local storage for the highscores, also was able to dsiplay and add to highscore section of the html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
     <section id="highscore-area">
       <!-- uses append child and local storage in js to show list info -->
-      <ul id="highscore-list"></ul>
+      <h2>HIGHSCORES</h2>
+      <ul id="highscoreList"></ul>
     </section>
   </main>
 
